# zero2prod_practice

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: mod.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
