[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
config = "0.13"
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.14"
fake = "2.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "migrate",
    "offline",
    "chrono"
]

[dev-dependencies]
once_cell = "1"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.5"
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
